--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta)
             desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, 
             sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original.</p>
-            <img src="images/emoji.jpeg" alt="Profile photo" />
+            <img src="images/fly.jpg" alt="Profile photo" />
       </div>
       <br/>
       
